Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Convert currency on line into Function field
* Use digits of currency for debit and credit
* Use the right currency to compute  balance, debit/credit of accounts

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release