@@ -1,3 +1,5 @@
+* Remove egenix-mx-base
+
 Version 1.4.0 - 2009-10-19
 * Bug fixes (see mercurial logs for details)
 * Convert currency on line into Function field
